# SuperClass

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-android.pro  proguard-rules.pro
app/src/androidTest/java/com/example/superclass/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/superclass/binder/: Person.aidl  PersonAidl.aidl
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/cxx/: cxx.cpp
app/src/main/cpp/ffmpeg/: CMakeLists.txt  ffmpeg.cpp
app/src/main/cpp/ffmpeg/dongnao/: AudioChannel.cpp  AudioChannel.h  BaseChannel.cpp  BaseChannel.h  CMakeLists.txt  DNFFmpeg.cpp  DNFFmpeg.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  dongnao.cpp  macro.h  safe_queue.h
app/src/main/cpp/fix/: CMakeLists.txt  art_method.h  fix.cpp  object.h
app/src/main/cpp/gif/: CMakeLists.txt  gif.cpp
app/src/main/java/com/example/superclass/: GuidActivity.kt  MainActivity.java
app/src/main/java/com/example/superclass/annotation/: 笔记
app/src/main/java/com/example/superclass/aop/: AopJavaActivity.java  笔记
app/src/main/java/com/example/superclass/battery/: Battery.java  BatteryActivity.java  JobManager.java  MyJobService.java  PowerConnectionReceiver.java  WifiConnectionReceiver.java
app/src/main/java/com/example/superclass/binder/: BinderActivity.java  BinderService.java  Person.java  笔记
app/src/main/java/com/example/superclass/eventbus/: EventBus.java  SubscribleMethod.java  Subsribe.java  ThreadMode.java
app/src/main/java/com/example/superclass/face/: Face.java  面试题
app/src/main/java/com/example/superclass/file/: ExternalFileUtils.java  FileActivityActivity.java  InternalFileUtils.java
app/src/main/java/com/example/superclass/framework/: 启动模式
app/src/main/java/com/example/superclass/gif/: GifActivity.java  GifHandler.java
app/src/main/java/com/example/superclass/hotfix/: Caculator.java  DexManager.java  HotFixActivity.java  Replace.java
app/src/main/java/com/example/superclass/image/: BigView.java  ImageOptActivity.java  ImageResize.java
app/src/main/java/com/example/superclass/ioc/: BaseActivity.java  ContentView.java  InjectUtils.java  ViewInject.java
app/src/main/java/com/example/superclass/memory/: MemoryOptActivity.java
app/src/main/java/com/example/superclass/plugin/: PluginMainActivity.kt  PluginManager.kt  ProxyActivity.java  笔记
app/src/main/java/com/example/superclass/property/: PropertyOptActivity.java
app/src/main/java/com/example/superclass/reflect/: AClass.java  ReflectTest.java
app/src/main/java/com/example/superclass/reinforce/: AES.java  ProxyApplication.java  RSA.java  ReinforceActivity.java  SHA.java  unReinforce.java
app/src/main/java/com/example/superclass/thread/: HandlerActivity.kt  ThreadClass.java  ThreadLocalTest.java  笔记
app/src/main/java/com/example/superclass/ui/: TouchEvent.java  TouchEventActivity.java
app/src/main/java/com/example/superclass/uitls/: DebugUtil.java  Permission.java  linux.java
app/src/main/res/drawable/: btn_bottom_confirm_bg.xml
app/src/main/res/layout/: activity_aop_java.xml  activity_battery.xml  activity_data_binding.xml  activity_dnffmpeg.xml  activity_event_bus.xml  activity_ffmpeg.xml  activity_file_activity.xml  activity_gif.xml  activity_guid.xml  activity_handler.xml  activity_hot_fix.xml  activity_image_opt.xml  activity_login.xml  activity_main.xml  activity_memory_opt.xml  activity_plugin_main.xml  activity_property_opt.xml  activity_reciver.xml  activity_reinforce.xml  activity_touch_event.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: path.xml
app/src/test/java/com/example/superclass/: ExampleUnitTest.java
app/src/test/java/com/example/superclass/handler/: QActivityThread.java  QHandler.java  QLooper.java  QMessage.java  QMessageQueue.java
app/src/test/java/com/example/superclass/structure/: Array.java
pluginapp/: build.gradle
(+37 files in other folders)
